# IGEM-GPU-simu

./: CMakeLists.txt  README.md
include/: BufferManager.h  Camera.h  Engine.h  HostParams.h  InputManager.h  ParallelRefiller.h  PogiRandom.h  ShaderManager.h  Timer.h  WindowManager.h
shaders/: DeviceParams.comp
shaders/compute/: clear_grid.comp  detect_collision.comp  insert_coords.comp  update_dynamics.comp
shaders/render/renderA/: A.frag  A.vert
shaders/render/renderB/: B.frag  B.vert
shaders/render/renderF/: F.frag  F.vert
src/: BufferManager.c  CMakeLists.txt  Camera.c  Engine.c  InputManager.c  ParallelRefiller.c  PogiRandom.c  ShaderManager.c  WindowManager.c  main.c
